--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             </div>
 
         </div>
+        <div class="no-result" id="noResults">
+            <p>no results <span style="letter-spacing: -2px;">:'(</span></p>
+        </div>
     </div>
     <!-- custom js -->
     <script src="customjs.js"></script>
